<resources>
    <string name="app_name">Movie Introduction</string>
    <string name="action_get_started">Get Started</string>

    <string name="title_welcome_app">The film world</string>
    <string name="title_genres">Genres</string>
    <string name="title_home">Home</string>
    <string name="title_toprate">Top rate</string>
    <string name="title_nowplay">Now Playing</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_myfavorite">My Favorite</string>
    <string name="title_action">Action</string>
    <string name="title_date">Aug, 20, 2020</string>
    <string name="title_point">9.1</string>
    <string name="title_vote_count">v 1000</string>
    <string name="title_movie_name">Spider Man 3</string>
    <string name="title_top_movie">3</string>
    <string name="title_search">Search</string>
    <string name="title_back">Back</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_overview">Overview</string>
    <string name="title_cast_and_crew">Cast and Crew</string>
    <string name="title_name_cast">Ali Phuong Trinh</string>
    <string name="title_recommendation">Recommendations</string>
    <string name="title_overview_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>

    <string name="error_default_message">An error occurred. Please try again!</string>
</resources>
