<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintFavoriteMovie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_5"
    android:background="@drawable/bg_item_bottom_movie">

    <ImageView
        android:id="@+id/imageBackdrop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:adjustViewBounds="true"
        android:background="@drawable/bg_item_movie"
        android:scaleType="fitXY"
        android:src="@drawable/backgroud"
        app:layout_constraintBottom_toTopOf="@+id/textName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete_forever_black_24dp"
        android:tint="@color/colorCapeCod"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_5"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textVoteAverage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageBackdrop"
        android:layout_marginBottom="@dimen/dp_64"
        android:background="@drawable/bg_circle_vote"
        android:padding="@dimen/dp_5"
        android:textColor="@color/colorSaffron"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/title_point" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_20"
        android:lines="1"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/title_date" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageBackdrop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_108"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/colorCapeCod"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toTopOf="@+id/textDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/title_movie_name" />

</androidx.constraintlayout.widget.ConstraintLayout>
